src/test/deca/context/invalid/sansObjet/declPlusVarInit.deca
// Description:
//    Programme minimaliste utilisant la déclaration de plusieurs variabless
//
// Resultats:
//
//
// Historique:
//    cree le 13/01/2020

{
      int x,y = 4,3;
}
